--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
     <title>Giux's Shop</title>
+
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
     <!-- prima riga -->
     <!-- blocco uno -->
-    <div class="pad">
+    <div class="item">
       <img src="img/iPad.jpg" alt="">
       <div class="cuore">
         &hearts;
@@ -17,17 +20,17 @@
       </div>
     </div>
     <!-- blocco due -->
-    <div class="telefono">
+    <div class="item">
       <img src="img/iPhone.jpg" alt="">
       <div class="cuore">
         &hearts;
       </div>
-      <div class="sconto">
+      <div class="sconto rosso">
         -5%
       </div>
     </div>
     <!-- blocco tre -->
-    <div class="cuffie">
+    <div class="item">
       <img src="img/Headphones.jpg" alt="">
       <div class="cuore">
         &hearts;
