--- a/index.html
+++ b/index.html
@@ -10,35 +10,69 @@
   <body>
     <!-- prima riga -->
     <!-- blocco uno -->
-    <div class="item">
-      <img src="img/iPad.jpg" alt="">
-      <div class="cuore">
+    <main class="riga">
+      <div class="item">
+        <img src="img/iPad.jpg" alt="">
+        <div class="cuore">
         &hearts;
+        </div>
+        <div class="sconto">
+          -30%
+        </div>
       </div>
-      <div class="sconto">
-        -30%
-      </div>
-    </div>
     <!-- blocco due -->
-    <div class="item">
-      <img src="img/iPhone.jpg" alt="">
-      <div class="cuore">
-        &hearts;
+      <div class="item">
+        <img src="img/iPhone.jpg" alt="">
+        <div class="cuore">
+          &hearts;
+        </div>
+        <div class="sconto rosso">
+          -5%
+        </div>
       </div>
-      <div class="sconto rosso">
-        -5%
-      </div>
-    </div>
     <!-- blocco tre -->
-    <div class="item">
-      <img src="img/Headphones.jpg" alt="">
-      <div class="cuore">
+      <div class="item">
+        <img src="img/Headphones.jpg" alt="">
+        <div class="cuore">
+          &hearts;
+        </div>
+        <div class="sconto">
+          -30%
+        </div>
+      </div>
+    </main>
+    <!-- seconda riga -->
+    <!-- blocco uno -->
+    <main class="riga">
+      <div class="item">
+        <img src="img/iPad.jpg" alt="">
+        <div class="cuore">
         &hearts;
+        </div>
+        <div class="sconto">
+          -30%
+        </div>
       </div>
-      <div class="sconto">
-        -30%
+    <!-- blocco due -->
+      <div class="item">
+        <img src="img/iPhone.jpg" alt="">
+        <div class="cuore">
+          &hearts;
+        </div>
+        <div class="sconto rosso">
+          -5%
+        </div>
       </div>
-    </div>
-
+    <!-- blocco tre -->
+      <div class="item">
+        <img src="img/Headphones.jpg" alt="">
+        <div class="cuore">
+          &hearts;
+        </div>
+        <div class="sconto">
+          -30%
+        </div>
+      </div>
+    </main>
   </body>
 </html>
